# hyperlog

./: .dockerignore  .drone.yml  .env  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  buf.yaml  cuddle.yaml  demo.cast  is-it-vim.cast  it-is-nice.cast
.woodpecker/: ci.yaml  manifest.yaml
crates/hyperlog/: Cargo.toml
crates/hyperlog-core/: Cargo.toml
crates/hyperlog-core/src/: commander.rs  engine.rs  lib.rs  log.rs  querier.rs  shared_engine.rs  state.rs  storage.rs
crates/hyperlog-protos/: Cargo.toml  build.rs
crates/hyperlog-protos/proto/: hyperlog.proto
crates/hyperlog-protos/src/: lib.rs
crates/hyperlog-server/: Cargo.toml
crates/hyperlog-server/migrations/crdb/: 20240201211013_initial.sql  20240601104242_add_archive_column_to_nodes.sql  20260530120000_add_users_and_auth.sql  20260530130000_root_name_per_user.sql  20260530140000_nodes_path_pattern_index.sql  20260531100000_add_node_sort_order.sql  20260531120000_add_node_created_at.sql
crates/hyperlog-server/src/: auth.rs  commands.rs  external_grpc.rs  external_http.rs  internal_http.rs  lib.rs  querier.rs  services.rs  state.rs
crates/hyperlog-server/src/services/: archive.rs  backlinks.rs  create_item.rs  create_root.rs  create_section.rs  get_archived.rs  get_available_roots.rs  get_graph.rs  get_view.rs  move_node.rs  reorder.rs  restore.rs  toggle_item.rs  update_item.rs
crates/hyperlog-tui/: Cargo.toml
crates/hyperlog-tui/src/: app.rs  command_parser.rs  commander.rs  commands.rs  components.rs  core_state.rs  editor.rs  engine.rs  events.rs  lib.rs  logging.rs  models.rs  project_dirs.rs  querier.rs  shared_engine.rs  state.rs  storage.rs  terminal.rs
crates/hyperlog-tui/src/app/: command_bar.rs  dialog.rs
crates/hyperlog-tui/src/app/dialog/: create_item.rs  edit_item.rs
crates/hyperlog-tui/src/commander/: local.rs  remote.rs
crates/hyperlog-tui/src/commands/: archive.rs  batch.rs  create_item.rs  create_section.rs  open_item.rs  open_update_item_dialog.rs  toggle_item.rs  update_graph.rs  update_item.rs
crates/hyperlog-tui/src/components/: graph_explorer.rs  movement_graph.rs  render_graph.rs
crates/hyperlog-tui/src/components/render_graph/: classic.rs  summarize.rs
crates/hyperlog-tui/src/querier/: local.rs  remote.rs
crates/hyperlog/screens/: outer-focus.md
crates/hyperlog/src/: cli.rs  commander.rs  engine.rs  events.rs  log.rs  main.rs  server.rs  shared_engine.rs  state.rs
scripts/: dev.sh  install.sh
templates/: docker-compose.yaml
