[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
hyperlog-core = { path = "crates/hyperlog-core" }
hyperlog-tui = { path = "crates/hyperlog-tui" }
hyperlog-server = { path = "crates/hyperlog-server" }
hyperlog-protos = { path = "crates/hyperlog-protos" }

anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dotenv = { version = "0.15" }
axum = { version = "0.8" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
itertools = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
futures = { version = "0.3.30" }
sha2 = { version = "0.10.8" }
hex = { version = "0.4.3" }
toml = { version = "0.8.14" }

[workspace.package]
version = "0.5.0"
