[package]
name = "hyperlog-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
axum.workspace = true

serde = { version = "1.0.201", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "time",
] }
uuid = { version = "1.8.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
serde_json = "1.0.117"
bus = "2.4.1"
dirs = "5.0.1"

[dev-dependencies]
similar-asserts = "1.5.0"
tempfile = "3.10.1"
