[package]
name = "hyperlog-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
axum.workspace = true

serde = { version = "1.0.201", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"

[dev-dependencies]
similar-asserts = "1.5.0"
tempfile = "3.10.1"
