[package]
name = "hyperlog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlog-core.workspace = true
hyperlog-protos.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tonic.workspace = true

tower-http = { version = "0.6.0", features = ["cors", "trace"] }
sqlx = { version = "0.8.0", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "time",
] }

# auth
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
rand = "0.8"
sha2.workspace = true
hex.workspace = true
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
similar-asserts = "1.5.0"
tempfile = "3.10.1"
