[package]
name = "hyperlog-tui"
version = "0.1.0"
edition = "2021"
repository = "https://git.front.kjuulh.io/kjuulh/hyperlog"

[dependencies]
hyperlog-core.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
itertools.workspace = true

ratatui = "0.26.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
human-panic = "2.0.0"

[dev-dependencies]
similar-asserts = "1.5.0"
