[package]
name = "hyperlog-tui"
version = "0.1.0"
edition = "2021"
repository = "https://git.front.kjuulh.io/kjuulh/hyperlog"

[dependencies]
hyperlog-core.workspace = true
hyperlog-protos.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tonic.workspace = true
futures.workspace = true
sha2.workspace = true
uuid.workspace = true
hex.workspace = true
toml.workspace = true

ratatui = "0.28.0"
crossterm = { version = "0.28.0", features = ["event-stream"] }
directories = "5.0.1"
human-panic = "2.0.0"
ropey = "1.6.1"
bus = "2.4.1"
dirs = "5.0.1"

[dev-dependencies]
similar-asserts = "1.5.0"
tempfile = "3.10.1"
