[package]
name = "hyperlog"
version = "0.1.0"
edition = "2021"
repository = "https://git.kjuulh.io/kjuulh/hyperlog"

[dependencies]
hyperlog-core.workspace = true
hyperlog-tui.workspace = true
hyperlog-server = { workspace = true, optional = true }

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

bus = "2.4.1"
dirs = "6.0.0"

[dev-dependencies]
similar-asserts = "1.5.0"
tempfile = "3.10.1"

[features]
default = ["include_server"]
include_server = ["dep:hyperlog-server"]
